# x07-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SUPPORT.md  x07-toolchain.toml  x07.json  x07.lock.json
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  postStart.sh
.github/workflows/: ci.yml  perf-smoke.yml  release-guards.yml  sandboxed-stdio-dogfood.yml  trust-registry-monitor.yml  verify-release-asset.yml
arch/: contracts.lock.json  manifest.lock.json  manifest.x07arch.json
arch/budgets/: index.x07budgets.json
arch/pins/: mcp_kit.json
cli/src/: app.x07.json  fixtures.x07.json
conformance/: .gitignore  README.md  conformance-baseline.yml  run_server_conformance.sh  spawn_reference_http.sh  wait_for_http.sh
conformance/client-auth/: run_scenario.py
conformance/client-x07/: AGENT.md  x07.json  x07.lock.json
conformance/trust-tlog/: README.md  run.sh
crates/x07-mcp-cli/: Cargo.toml
crates/x07-mcp-cli/src/: main.rs
demos/postgres-public-beta/: README.md  capture_outputs.sh  docker-compose.yml  run_demo.sh  verify_demo.sh
docs/: SUMMARY.md  index.md
docs/concepts/: http-sse.md  record-replay.md  router-worker.md  sandbox.md  tasks.md  tool-schemas.md
docs/getting-started/: bundle-mcpb.md  codespaces.md  conformance.md  install.md  (+7 more)
registry/: README.md
schemas/: x07.mcp.trust.bundle.schema.json  x07.mcp.trust.framework.schema.json  x07.mcp.trust.lock.schema.json
scripts/: bump_release.py  generate_cli_template_asset_module.py  generate_external_packages_lock.py  lockgen_common.py
servers/: README.md
(+624 files in other folders)
