[package]
name = "x07-mcp-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "x07-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
tempfile = "3.10.1"

